# amigo-pincel

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  PLAN.md  README.md  STATUS.md  wrangler.jsonc  wrangler.toml
.github/workflows/: ci.yml  deploy-website.yml  release-desktop.yml  release.yml
crates/aseprite-writer/: Cargo.toml  LICENSE-APACHE  README.md
crates/aseprite-writer/src/: bytes.rs  error.rs  file.rs  lib.rs  types.rs  write.rs
crates/aseprite-writer/tests/: roundtrip.rs
crates/pincel-core/: Cargo.toml
crates/pincel-core/benches/: compose.rs
crates/pincel-core/src/: error.rs  geometry.rs  lib.rs
crates/pincel-core/src/codec/: aseprite_read.rs  aseprite_write.rs  error.rs  mod.rs
crates/pincel-core/src/command/: add_frame.rs  add_layer.rs  add_slice.rs  add_tile.rs  add_tilemap_layer.rs  add_tileset.rs  bus.rs  clear_region.rs  dirty.rs  draw_ellipse.rs  draw_line.rs  draw_rectangle.rs  error.rs  fill_region.rs  mod.rs  move_layer.rs  move_selection_content.rs  place_tile.rs  remove_layer.rs  remove_slice.rs  set_layer_name.rs  set_layer_visible.rs  set_pixel.rs  set_slice_key.rs  set_tile_pixel.rs
crates/pincel-core/src/document/: cel.rs  cel_map.rs  color.rs  color_mode.rs  frame.rs  layer.rs  mod.rs  palette.rs  slice.rs  tag.rs  tileset.rs
crates/pincel-core/src/render/: compose.rs  mod.rs  request.rs
crates/pincel-core/tests/: aseprite_codec.rs  aseprite_codec_tilemap.rs  aseprite_read.rs  command_bus.rs  render_compose.rs
crates/pincel-wasm/: Cargo.toml
crates/pincel-wasm/src/: events.rs  lib.rs
crates/pincel-wasm/tests/: paint_save_open_roundtrip.rs
docs/: RELEASING.md
docs/specs/: canvas.md  cli.md  lessons.md  mcp.md  pincel.md  website-spec.md
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
ui/: .prettierignore  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  wrangler.toml
ui/scripts/: check-wasm-pkg.mjs
ui/src/: App.svelte  app.css  main.ts  sw.ts  vite-env.d.ts
ui/src/lib/: color.ts
ui/src/lib/components/: FileAssocDialog.svelte  LayersPanel.svelte  PalettePanel.svelte  RecoveryDialog.svelte  SlicesPanel.svelte  TileEditor.svelte  TileThumbnail.svelte  TilesetPanel.svelte
ui/src/lib/core/: index.ts
ui/src/lib/fs/: index.ts
ui/src/lib/idb/: autosave.ts  db.ts  prefs.ts  recent-files.ts
ui/src/lib/menu/: index.ts
ui/src/lib/platform/: index.ts
ui/src/lib/render/: canvas2d-renderer.ts  canvas2d.ts  types.ts  webgpu-renderer.ts
ui/src/lib/view/: fit.ts
website/: README.md  eslint.config.js  package.json  pnpm-lock.yaml  svelte.config.js  wrangler.toml
website/src/: app.html
website/src/lib/: config.ts
website/src/lib/components/: ComparisonTable.svelte  FeatureGrid.svelte  FeatureSection.svelte  FinalCta.svelte  Footer.svelte  Header.svelte  Hero.svelte  HeroScene.svelte  HowItWorks.svelte  Logo.svelte  PixelIcon.svelte  Section.svelte  SeoHead.svelte
website/src/lib/data/: features.ts
website/src/lib/stores/: crt.svelte.ts
website/src/lib/styles/: app.css
website/src/routes/: +layout.svelte  +layout.ts  +page.svelte
website/src/routes/about/: +page.svelte
website/src/routes/app/: +page.svelte
website/src/routes/embed/: +page.svelte
website/src/routes/features/: +page.svelte
website/src/routes/robots.txt/: +server.ts
website/src/routes/sitemap.xml/: +server.ts
website/static/: 404.html  _headers
