[workspace]
members = ["crates/pincel-core"]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/amigo-labs/amigo-pincel"
rust-version = "1.85"

[workspace.dependencies]
thiserror = "2"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
unwrap_used = "warn"
