[workspace]
members = ["crates/aseprite-writer", "crates/pincel-core"]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/amigo-labs/amigo-pincel"
rust-version = "1.85"

[workspace.dependencies]
aseprite-loader = "0.4.2"
aseprite-writer = { version = "0.1.0", path = "crates/aseprite-writer" }
flate2 = "1"
thiserror = "2"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
