[package]
name = "aseprite-writer"
version = "0.1.0"
description = "Aseprite v1.3 file format writer (standalone, no Pincel dependency)"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
thiserror = { workspace = true }

[dev-dependencies]
aseprite-loader = { workspace = true }

[lints]
workspace = true
