[package]
name = "pincel-core"
version = "0.1.0"
description = "Pincel pixel-art editor core: document model, tools, codecs, and compose()"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
aseprite-loader = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
