[package]
name = "pincel-wasm"
version = "0.1.0"
description = "WebAssembly bindings for the Pincel core (wasm-bindgen / wasm-pack target)"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
pincel-core = { workspace = true }
wasm-bindgen = { workspace = true }

[lints]
workspace = true

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

# wasm-pack ships its own pinned binaryen and downloads it from GitHub on
# first use, which fails in sandboxed / firewalled build environments (the
# release blocker noted in STATUS.md). Disable wasm-pack's bundled pass and
# let CI run a system `wasm-opt` (installed via apt) after the build — see
# .github/workflows/release.yml. Release-profile rustc optimizations still
# apply; only the post-build binaryen pass is deferred to the explicit step.
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

